--- a/PL/App.xaml
+++ b/PL/App.xaml
@@ -4,6 +4,23 @@
              xmlns:local="clr-namespace:PL"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <LinearGradientBrush 
+             x:Key="MyButtonBackground" 
+            EndPoint="0.5,1" StartPoint="0.5,0">
+            <GradientStop Color="#FFF9FFFA"/>
+            <GradientStop Color="#FFA3E5AD" Offset="1"/>
+        </LinearGradientBrush>
+
+        <Style x:Key="buttunStyle" TargetType="Control">
+            <Setter Property="FontFamily" Value="Arial Black" />
+            <Setter Property="FontWeight" Value="Normal" />
+            <Setter Property="Height" Value="39" />
+            <Setter Property="Width" Value="116" />
+            <Setter Property="FontSize" Value="21" />
+
+        </Style>
+        <Style TargetType="Button" BasedOn="{StaticResource buttunStyle}">
+            <Setter Property="Background" Value="#FFDC2711" />
+        </Style>
     </Application.Resources>
 </Application>
