--- a/PL/CustomerWindow.xaml
+++ b/PL/CustomerWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
-        Title="CustomerWindow" Height="450" Width="800">
+        Title="CustomerWindow" Height="450" Width="800"         Background="{StaticResource MyButtonBackground}">
     <Grid>
         <Grid x:Name="customerDetails" HorizontalAlignment="Left" Margin="31,70,0,0" VerticalAlignment="Top">
             <Grid.ColumnDefinitions>
@@ -50,8 +50,8 @@
                 <DataGridTextColumn x:Name="ToCustomerNmaeCustomerColumn" Width="SizeToHeader" Header="Customer Name" Binding="{Binding customer.Name}"/>
             </DataGrid.Columns>
         </DataGrid>
-        <Button x:Name="OptionButtun" Content="Button" HorizontalAlignment="Left" Margin="90,350,0,0" VerticalAlignment="Top"  Click="OptionButtun_Click" Height="39" Width="116" Background="#FFDC2711" FontFamily="Arial Black" FontWeight="Normal"/>
-        <Button x:Name="closeButton" Content="close" HorizontalAlignment="Left" Margin="233,350,0,0" VerticalAlignment="Top" Click="Button_Click_Close" Height="39" Width="116" Background="#FFDC2711" FontFamily="Arial Black" FontWeight="Normal"/>
+        <Button x:Name="OptionButtun" Content="Button" HorizontalAlignment="Left" Margin="90,350,0,0" VerticalAlignment="Top"  Click="OptionButtun_Click"/>
+        <Button x:Name="closeButton" Content="close" HorizontalAlignment="Left" Margin="233,350,0,0" VerticalAlignment="Top" Click="Button_Click_Close"/>
         <Label Content="Parcels the customer sent:" HorizontalAlignment="Left" Margin="431,10,0,0" VerticalAlignment="Top" Width="244"/>
         <Label Content="Parcels the customer recieved:" HorizontalAlignment="Left" Margin="417,0,0,0" VerticalAlignment="Center" Width="244"/>
 
