--- a/PL/MainWindow.xaml
+++ b/PL/MainWindow.xaml
@@ -5,20 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800"         Background="{StaticResource MyButtonBackground}">
     <Grid>
-        <Grid.Background>
-            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                <GradientStop Color="#FFF7F3F3" Offset="0"/>
-                <GradientStop Color="#FF8CEE87" Offset="1"/>
-            </LinearGradientBrush>
-        </Grid.Background>
+       
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <Button x:Name="DronesWindow" Content="Drones" HorizontalAlignment="Left" Margin="39,289,0,0" VerticalAlignment="Top"  Height="72" Width="205" Background="#FFDC2711" FontSize="24" FontFamily="Arial Black" FontWeight="Bold" Click="DronesWindow_Click"/>
-        <Button x:Name="CustomersWindow" Content="Customers" HorizontalAlignment="Left" Margin="278,289,0,0" VerticalAlignment="Top" Height="56" Width="134" Click="CustomersWindow_Click" />
-        <Button x:Name="StationsWindow" Content="Stations" HorizontalAlignment="Left" Margin="464,289,0,0" VerticalAlignment="Top" Height="56" Width="109" Click="StationsWindow_Click"/>
+        <Button x:Name="DronesWindow" Content="Drones" HorizontalAlignment="Left" Margin="50,289,0,0" Height="56" Width="134" Click="DronesWindow_Click" />
+        <Button x:Name="CustomersWindow" Content="Customers" HorizontalAlignment="Left" Margin="278,289,0,0"  Height="56" Width="134" Click="CustomersWindow_Click" FontWeight="Normal"  />
+        <Button x:Name="StationsWindow" Content="Stations" HorizontalAlignment="Left" Margin="464,289,0,0"  Height="56" Width="134" Click="StationsWindow_Click" />
         <Grid Margin="181,36,180,181">
             <Grid.Background>
                 <ImageBrush ImageSource="/dronetolist.jpg"/>
