--- a/PL/ParcelWindow.xaml
+++ b/PL/ParcelWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
-        Title="ParcelWindow" Height="450" Width="800">
+        Title="ParcelWindow" Height="450" Width="800"         Background="{StaticResource MyButtonBackground}">
     <Grid>
         <Grid x:Name="grid1" HorizontalAlignment="Left" Margin="98,74,0,0" VerticalAlignment="Top">
             <Grid.ColumnDefinitions>
