--- a/PL/StationListWindow.xaml
+++ b/PL/StationListWindow.xaml
@@ -17,5 +17,7 @@
         </DataGrid>
         <Button  Content="Button" HorizontalAlignment="Left" Margin="630,81,0,0" VerticalAlignment="Top"  Click="OptionButtun_Click"/>
         <Button x:Name="closeButtun"  Content="Close" HorizontalAlignment="Left" Margin="630,143,0,0" VerticalAlignment="Top"  Click="closeButtun_Click"/>
+        <Button x:Name="groupButtun" Content="Group List" HorizontalAlignment="Left" Margin="630,217,0,0" VerticalAlignment="Top" Click="groupButtun_Click"/>
+
     </Grid>
 </Window>
