--- a/PL/ParcelWindow.xaml
+++ b/PL/ParcelWindow.xaml
@@ -64,7 +64,7 @@
             <TextBox x:Name="nameTextBox" Grid.Column="1" Height="23" Margin="3,0,81,0" Grid.Row="10" Text="{Binding Receiver.Name, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center"/>
             <Label Content="Sender Id:" Grid.Column="0" HorizontalAlignment="Left" Margin="3" Grid.Row="11" VerticalAlignment="Center"/>
             <TextBox x:Name="idTextBox3" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="3" Grid.Row="11" Text="{Binding Sender.Id, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Width="120"/>
-            <Label  x:Name="SenderNameLabel" Content="Sender Name:" Grid.Column="0" HorizontalAlignment="Left" Margin="-3,0,0,0" Grid.Row="12" VerticalAlignment="Top"/>
+            <Label  x:Name="SenderNameLabel" Content="Sender Name:" Grid.Column="0" HorizontalAlignment="Left" Grid.Row="12" VerticalAlignment="Top" Margin="3,0,0,0"/>
             <TextBox x:Name="nameTextBox1" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="3" Grid.Row="12" Text="{Binding Sender.Name, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Width="120"/>
             <Grid x:Name="grid2" HorizontalAlignment="Left" Margin="-172,42,0,0" Grid.Row="3" VerticalAlignment="Top" Grid.RowSpan="3">
                 <Grid.ColumnDefinitions>
