--- a/PL/CustomerListWindow.xaml
+++ b/PL/CustomerListWindow.xaml
@@ -18,7 +18,7 @@
                 <DataGridTextColumn x:Name="phoneColumn" Binding="{Binding Phone}" Header="Phone" Width="SizeToHeader"/>
             </DataGrid.Columns>
         </DataGrid>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="400,355,0,0" VerticalAlignment="Top" Click="Button_Click"/>
+        <Button Content="Add New Customer" HorizontalAlignment="Left" Margin="356,355,0,0" VerticalAlignment="Top" Click="Button_Click" Width="214"/>
         <Button x:Name="closeButtun" Content="Close" HorizontalAlignment="Left" Margin="590,355,0,0" VerticalAlignment="Top" Click="closeButtun_Click" />
     </Grid>
 </Window>
