--- a/PL/DroneList.xaml
+++ b/PL/DroneList.xaml
@@ -48,10 +48,12 @@
 
             </DataGrid.Columns>
         </DataGrid>
-        <Button Content="Add New Drone" HorizontalAlignment="Left" Margin="651,221,0,0" Grid.Row="1" VerticalAlignment="Top" Click="Button_Click"  Grid.ColumnSpan="3" Grid.Column="1"/>
-        <Button x:Name="closeButton" Content="Close" HorizontalAlignment="Left" Margin="651,300,0,0" Grid.Row="1" VerticalAlignment="Top" Click="Button_Click_Close" Grid.ColumnSpan="3" Grid.Column="1">
+        <Button Content="Add New Drone" HorizontalAlignment="Left" Margin="598,221,0,0" Grid.Row="1" VerticalAlignment="Top" Click="Button_Click"  Grid.ColumnSpan="3" Grid.Column="1" Width="169"/>
+        <Button x:Name="closeButton" Content="Close" HorizontalAlignment="Left" Margin="598,300,0,0" Grid.Row="1" VerticalAlignment="Top" Click="Button_Click_Close" Grid.ColumnSpan="3" Grid.Column="1" Width="169">
 
         </Button>
-        <Button Content="Group List" HorizontalAlignment="Left" Margin="621,0,0,0" Grid.Row="1" VerticalAlignment="Center" Grid.ColumnSpan="3" Click="Button_Click_1" Grid.Column="1" Width="146"/>
+        <Button Content="Group List" HorizontalAlignment="Left" Margin="598,130,0,0" Grid.Row="1" VerticalAlignment="Top" Grid.ColumnSpan="3" Click="Button_Click_1" Grid.Column="1" Width="169"/>
+        <Button x:Name="clearButtun" Content="clear" HorizontalAlignment="Left" Margin="598,72,0,0" VerticalAlignment="Top" Click="clearButtun_Click" Grid.ColumnSpan="3" Grid.Column="1" Grid.Row="1" Width="169"/>
+
     </Grid>
 </Window>
