--- a/PL/StationListWindow.xaml
+++ b/PL/StationListWindow.xaml
@@ -7,9 +7,9 @@
         mc:Ignorable="d"
         Title="StationListWindow" Height="450" Width="800" Activated="Window_Activated"         Background="{StaticResource MyButtonBackground}">
     <Grid>
-        <DataGrid x:Name="stationToListDataGrid" ItemsSource="{Binding}"  AutoGenerateColumns="False" EnableRowVirtualization="True"  Margin="88,81,257,139" RowDetailsVisibilityMode="VisibleWhenSelected" MouseDoubleClick="stationToListDataGrid_MouseDoubleClick">
+        <DataGrid x:Name="stationToListDataGrid" ItemsSource="{Binding}"  AutoGenerateColumns="False" EnableRowVirtualization="True"  Margin="122,81,212,139" RowDetailsVisibilityMode="VisibleWhenSelected" MouseDoubleClick="stationToListDataGrid_MouseDoubleClick">
             <DataGrid.Columns>
-                <DataGridTextColumn x:Name="availableCharginggSlotsNumberColumn" Binding="{Binding AvailableCharginggSlotsNumber}" Header="Available Chargingg Slots Number" Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="availableCharginggSlotsNumberColumn" Binding="{Binding AvailableChargeSlots}" Header="Available Chargingg Slots Number" Width="SizeToHeader"/>
                 <DataGridTextColumn x:Name="idColumn" Binding="{Binding Id}" Header="Id" Width="SizeToHeader"/>
                 <DataGridTextColumn x:Name="nameColumn" Binding="{Binding Name}" Header="Name" Width="SizeToHeader"/>
                 <DataGridTextColumn x:Name="rservedCharginggSlotsNumberColumn" Binding="{Binding RservedCharginggSlotsNumber}" Header="Rserved Chargingg Slots Number" Width="SizeToHeader"/>
@@ -17,7 +17,8 @@
         </DataGrid>
         <Button  Content="Button" HorizontalAlignment="Left" Margin="630,81,0,0" VerticalAlignment="Top"  Click="OptionButtun_Click"/>
         <Button x:Name="closeButtun"  Content="Close" HorizontalAlignment="Left" Margin="630,143,0,0" VerticalAlignment="Top"  Click="closeButtun_Click"/>
-        <Button x:Name="groupButtun" Content="Group List" HorizontalAlignment="Left" Margin="630,217,0,0" VerticalAlignment="Top" Click="groupButtun_Click"/>
+        <Button x:Name="groupButtun" Content="Group List" HorizontalAlignment="Left" Margin="630,227,0,0" VerticalAlignment="Top" Click="groupButtun_Click"/>
+        <Button x:Name="clearButtun" Content="clear" HorizontalAlignment="Left" Margin="630,281,0,0" VerticalAlignment="Top" Click="clearButtun_Click"/>
 
     </Grid>
 </Window>
