--- a/PL/StationWindow.xaml
+++ b/PL/StationWindow.xaml
@@ -30,7 +30,7 @@
             <Label Content="Longitude:" Grid.Column="0" HorizontalAlignment="Left" Margin="3" Grid.Row="4" VerticalAlignment="Center"/>
             <TextBox x:Name="longitudeTextBox"  PreviewTextInput="NumberValidationTextBox" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="3" Grid.Row="4" Text="{Binding Location.Longitude, Mode=TwoWay, NotifyOnValidationError=true, ValidatesOnExceptions=true}" VerticalAlignment="Center" Width="120" TextChanged="longitudeTextBox_TextChanged"/>
         </Grid>
-        <DataGrid x:Name="droneChargingDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True" Margin="277,284,413,21" RowDetailsVisibilityMode="VisibleWhenSelected" SelectionChanged="droneChargingDataGrid_SelectionChanged">
+        <DataGrid x:Name="droneChargingDataGrid" ItemsSource="{Binding}"  AutoGenerateColumns="False" EnableRowVirtualization="True" Margin="277,284,413,21" RowDetailsVisibilityMode="VisibleWhenSelected">
             <DataGrid.Columns>
                 <DataGridTextColumn x:Name="battaryStatusColumn" Binding="{Binding DroneCharging.BattaryStatus}" Header="Battary Status" Width="SizeToHeader"/>
                 <DataGridTextColumn x:Name="idColumn" Binding="{Binding DroneCharging.Id}" Header="Id" Width="SizeToHeader"/>
