--- a/PL/StationListWindow.xaml
+++ b/PL/StationListWindow.xaml
@@ -7,18 +7,20 @@
         mc:Ignorable="d"
         Title="StationListWindow" Height="450" Width="800" Activated="Window_Activated"         Background="{StaticResource MyButtonBackground}">
     <Grid>
-        <DataGrid x:Name="stationToListDataGrid" ItemsSource="{Binding}"  AutoGenerateColumns="False" EnableRowVirtualization="True"  Margin="122,81,212,139" RowDetailsVisibilityMode="VisibleWhenSelected" MouseDoubleClick="stationToListDataGrid_MouseDoubleClick">
+        <DataGrid x:Name="stationToListDataGrid" ItemsSource="{Binding}"  AutoGenerateColumns="False" EnableRowVirtualization="True"  Margin="37,81,275,139" RowDetailsVisibilityMode="VisibleWhenSelected" MouseDoubleClick="stationToListDataGrid_MouseDoubleClick">
             <DataGrid.Columns>
-                <DataGridTextColumn x:Name="availableCharginggSlotsNumberColumn" Binding="{Binding AvailableChargeSlots}" Header="Available Chargingg Slots Number" Width="SizeToHeader"/>
-                <DataGridTextColumn x:Name="idColumn" Binding="{Binding Id}" Header="Id" Width="SizeToHeader"/>
                 <DataGridTextColumn x:Name="nameColumn" Binding="{Binding Name}" Header="Name" Width="SizeToHeader"/>
-                <DataGridTextColumn x:Name="rservedCharginggSlotsNumberColumn" Binding="{Binding RservedCharginggSlotsNumber}" Header="Rserved Chargingg Slots Number" Width="SizeToHeader"/>
+
+                <DataGridTextColumn x:Name="idColumn" Binding="{Binding Id}" Header="Id" Width="SizeToHeader"/>
+
+                <DataGridTextColumn x:Name="availableCharginggSlotsNumberColumn" Binding="{Binding AvailableChargeSlots}" Header="Available Chargingg Slots Number" Width="SizeToHeader"/>
+                <DataGridTextColumn x:Name="rservedCharginggSlotsNumberColumn" Binding="{Binding RservedCharginggSlotsNumber}" Header="Reserved Chargingg Slots Number" Width="SizeToHeader"/>
             </DataGrid.Columns>
         </DataGrid>
-        <Button  Content="Add New Station" HorizontalAlignment="Left" Margin="630,81,0,0" VerticalAlignment="Top"  Click="OptionButtun_Click"/>
-        <Button x:Name="closeButtun"  Content="Close" HorizontalAlignment="Left" Margin="630,143,0,0" VerticalAlignment="Top"  Click="closeButtun_Click"/>
-        <Button x:Name="groupButtun" Content="Group List" HorizontalAlignment="Left" Margin="630,227,0,0" VerticalAlignment="Top" Click="groupButtun_Click"/>
-        <Button x:Name="clearButtun" Content="clear" HorizontalAlignment="Left" Margin="630,281,0,0" VerticalAlignment="Top" Click="clearButtun_Click"/>
+        <Button  Content="Add New Station" HorizontalAlignment="Left" Margin="600,81,0,0" VerticalAlignment="Top"  Click="OptionButtun_Click"/>
+        <Button x:Name="closeButtun"  Content="Close" HorizontalAlignment="Left" Margin="602,143,0,0" VerticalAlignment="Top"  Click="closeButtun_Click"/>
+        <Button x:Name="groupButtun" Content="Group List" HorizontalAlignment="Left" Margin="604,211,0,0" VerticalAlignment="Top" Click="groupButtun_Click"/>
+        <Button x:Name="clearButtun" Content="clear" HorizontalAlignment="Left" Margin="604,273,0,0" VerticalAlignment="Top" Click="clearButtun_Click"/>
 
     </Grid>
 </Window>
