--- a/PL/ParcelToListWindow.xaml
+++ b/PL/ParcelToListWindow.xaml
@@ -5,9 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
-        Title="ParcelToListWindow" Height="450" Width="800"         Background="{StaticResource MyButtonBackground}">
+        Title="ParcelToListWindow" Height="450" Width="800"         Background="{StaticResource MyButtonBackground}" Activated="Window_Activated">
     <Grid>
-        <DataGrid x:Name="parcelToListDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True"  Margin="28,77,263,143" RowDetailsVisibilityMode="VisibleWhenSelected" MouseDoubleClick="parcelToListDataGrid_MouseDoubleClick">
+        <DataGrid x:Name="parcelToListDataGrid" AutoGenerateColumns="False" EnableRowVirtualization="True"  Margin="28,77,263,143" RowDetailsVisibilityMode="VisibleWhenSelected" MouseDoubleClick="parcelToListDataGrid_MouseDoubleClick" >
             <DataGrid.Columns>
                 <DataGridTextColumn x:Name="idColumn" Binding="{Binding Id}" Header="Id" Width="SizeToHeader"/>
                 <DataGridTextColumn x:Name="idReceiverColumn" Binding="{Binding Receiver.Id}" Header="Reciever Id" Width="SizeToHeader"/>
